<resources>
    <string name="app_name">ADS Calculator</string>
    <string name="first_fragment_label">Old Values Fragment</string>
    <string name="second_fragment_label">New Values Fragment</string>
    <string name="input_old_ads_value">Input your old ADS sensitivity value</string>
    <string name="btn_calculate">calculate</string>
    <string name="input_fov_value">Input your FOV value from the menu (degrees)</string>
    <string name="input_aspect_ratio_width">Input your aspect ratio width</string>
    <string name="input_aspect_ratio_height">Input your aspect ratio height</string>
    <string name="text_aspect_ratio">Aspect Ratio</string>
    <string name="equals" translatable="false">=</string>
    <string name="greater" translatable="false"><![CDATA[>]]></string>
    <string name="ads_1" translatable="false">ADS 1x</string>
    <string name="ads_2" translatable="false">ADS 1.5x</string>
    <string name="ads_3" translatable="false">ADS 2x</string>
    <string name="ads_4" translatable="false">ADS 2.5x</string>
    <string name="ads_5" translatable="false">ADS 3x</string>
    <string name="ads_6" translatable="false">ADS 4x</string>
    <string name="ads_7" translatable="false">ADS 5x</string>
    <string name="ads_8" translatable="false">ADS 12x</string>
    <string name="btn_edit_values">re-calculate</string>
    <string name="btn_copy_all">copy values</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="title_text" translatable="false">Rainbow Six Siege Y5S3</string>
    <string name="subtitle_text" translatable="false">ADS SENSITIVITY CALCULATOR</string>
    <string name="copy_start" translatable="false">R6 Siege Y5S3 ADS Sensitivity Calculator</string>

    <string name="copyrightAntonKesy" translatable="false">by Anton Kesy</string>
    <string name="poorskillWebsite" translatable="false">https://www.poorskill.com</string>
    <string name="privacyPolicyURL" translatable="false">https://github.com/PoorSkill/r6adssensitivitycalculator-android/blob/main/store/privacy%20policy/privacy_policy.md</string>
    <string name="sourceCodeURL" translatable="false">https://github.com/PoorSkill/r6adssensitivitycalculator-android</string>
    <string name="reportBugURL" translatable="false">https://github.com/PoorSkill/r6adssensitivitycalculator-android/issues</string>
    <string name="rateAppURL" translatable="false">https://play.google.com/store/apps/details?id=com.poorskill.r6adssensitivitycalculator</string>
    <string name="contactMail" translatable="false">info@poorskill.com</string>
    <string name="website">Website</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="contact">Contact</string>
    <string name="sourceCode">Source Code</string>
    <string name="reportBug">Report Bug</string>
    <string name="rateApp">Rate App</string>
    <string name="version">VERSION</string>

    <string name="_9">9</string>
    <string name="_16">16</string>
    <string name="_60">60</string>
    <string name="_20">20</string>
    <string name="missingEditText">Please fill out all input fields with valid values</string>
    <string name="settingsTitle">Settings</string>
    <string name="aboutTitle">About</string>
    <!-- Preference Titles -->
    <string name="application_header">Application</string>
    <!-- Theme Preferences -->
    <string name="app_theme_title">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <!-- Language Preferences-->
    <string name="app_language_title">Language</string>
    <string name="system">System</string>
    <string name="english">English</string>
    <string name="russian">Russian*</string>
    <string name="german">German</string>
    <string name="spanish">Spanish*</string>
    <string name="french">French*</string>
    <string name="japanese">Japanese*</string>
    <string name="portuguese">Portuguese*</string>
    <string name="italian">Italian*</string>
    <string name="persian">Persian*</string>
    <string name="polish">Polish*</string>
    <string name="hindi">Hindi*</string>
    <string name="chinese">Chinese*</string>
    <!-- key == locale -->
    <string name="systemKey">system</string>
    <string name="englishKey" translatable="false">en</string>
    <string name="russianKey" translatable="false">ru</string>
    <string name="germanKey" translatable="false">de</string>
    <string name="spanishKey" translatable="false">es</string>
    <string name="frenchKey" translatable="false">fr</string>
    <string name="japaneseKey" translatable="false">ja</string>
    <string name="portugueseKey" translatable="false">pt</string>
    <string name="italianKey" translatable="false">it</string>
    <string name="persianKey" translatable="false">fa</string>
    <string name="polishKey" translatable="false">pl</string>
    <string name="hindiKey" translatable="false">hi</string>
    <string name="chineseKey" translatable="false">zh</string>
    <string name="action_settings">Settings</string>
    <!-- prefKeys -->
    <string name="prefApplicationThemePrefKey">prefApplicationThemePrefKey</string>
    <string name="prefApplicationLanguagePrefKey">prefApplicationLanguagePrefKey</string>

    <string name="ubisoftHelpURL">https://www.ubisoft.com/en-gb/game/rainbow-six/siege/news-updates/3IMlDGlaRFgdvQNq3BOSFv/guide-to-ads-sensitivity-in-y5s3</string>
    <string name="copied">"copied "</string>
    <string name="toClipboard">" to clipboard"</string>
    <string name="copyValues" translatable="false">Copie Values</string>
    <string name="everything">everything</string>
    <string name="errorPropertyAccess" translatable="false">uninitialized property access</string>
    <string name="old_fov">Old FOV</string>
    <string name="old_ads">Old ADS</string>
    <string name="old_aspect_ratio">Old aspect ratio</string>


</resources>