<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/application_header">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/prefApplicationThemePrefKey"
            app:title="@string/app_theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/systemKey"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="@string/prefApplicationLanguagePrefKey"
            app:title="@string/app_language_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>