<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    android:gravity="bottom"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ads0_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_1" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_0"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads1_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_2" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_1"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads2_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_3" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_2"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads3_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_4" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_3"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads4_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_5" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_4"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads5_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_6" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_5"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads6_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_7" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_6"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ads7_row"
        style="@style/newLinearLayoutGroup">

        <TextView
            style="@style/newValueTextView"
            android:text="@string/ads_8" />

        <TextView style="@style/equalsBinderNewValues" />

        <TextView
            android:id="@+id/output_ads_7"
            style="@style/newValueTextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditValues"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:text="@string/btn_edit_values"
            android:textColor="?color"
            android:textSize="@dimen/text_size_button" />

        <Button
            android:id="@+id/btn_share"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:text="@string/btn_copy_all"
            android:textColor="?color"
            android:textSize="@dimen/text_size_button" />

    </LinearLayout>


</LinearLayout>
